k3s/base/knative-serving/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
  labels:
    app.kubernetes.io/name: knative-serving
    app.kubernetes.io/version: "1.18.0"
